# net-shell

./: Cargo.toml  IFLOW.md  README.md  TEMPLATE_ENGINE.md  config.yaml  config_capture_groups_test.yaml  config_cascade_demo.yaml  config_local_test.yaml  script.sh
examples/: custom_for_tags.rs  debug_test.rs  detailed_test.rs  indent_test.rs  loop_newlines.rs  regex_debug.rs  regex_test.rs  simple_test.rs  template_demo.rs
scripts/: complex_extraction_demo.sh  deploy.sh  get_system_info.sh  global.sh  mock_install_docker.sh  mock_install_docker_compose.sh  mock_start_docker.sh  scene1.sh  test_capture_groups.sh  verify.sh
src/: lib.rs  main.rs  main_capture_test.rs  main_cascade.rs  template.rs
src/config/: mod.rs
src/executor/: mod.rs
src/models/: mod.rs
src/ssh/: local.rs  mod.rs
src/vars/: mod.rs
