[package]
name = "ai-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# YAML配置解析
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# SSH连接
ssh2 = "0.9"

# 异步支持
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 序列化
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1.0"
