[package]
name = "net-shell"
version = "0.3.9"
edition = "2021"
# crates.io 元数据补全
authors = ["li<1711293058@qq.com>"]
description = "A script execution and variable extraction framework with SSH remote execution and local execution support, pipeline orchestration, and flexible variable extraction via regex."
license = "MIT OR Apache-2.0"
repository = "https://github.com/winkb/net-shell"
readme = "README.md"
keywords = ["ssh", "remote", "pipeline", "script-execution"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/winkb/net-shell"
documentation = "https://docs.rs/net-shell"

[dependencies]
# YAML配置解析
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# SSH连接
ssh2 = "0.9"

# 异步支持
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 序列化
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1.0"
tempfile = "3.20.0"

[[bin]]
name = "main"
path = "src/main.rs"
